--- a/views/admin/editProduct.hbs
+++ b/views/admin/editProduct.hbs
@@ -1,3 +1,6 @@
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
 
 
 
@@ -76,8 +79,45 @@
       </div>
       </form>
     </div>
+             <form class="text-dark" id="delete-image-form">
+    {{#each images}}
+      <div class="tm-product-image m-3" style="display: flex; justify-content: space-between;" id="imagesRow{{this}}">
+        <img src="{{this}}" style="width: 50px;">
+        <button type="button" onclick="deleteImage(event, '{{../_id}}', '{{this}}')" class="btn btn-danger bg-white btn-sm">Delete</button>
+      </div>
+    {{/each}}
+  </form>
   </div>
+  
 </div>
+
   </div>
+
 </div>
 {{/each}}
+
+<script>
+      function deleteImage(event,productId,imgUrl) {
+        event.preventDefault();
+        var formData = {
+          'productId': productId,
+           'imgUrl': imgUrl,
+        }
+        console.log(formData)
+        $.ajax({
+          url: '/admin/deleteSelectedImg',
+          type: 'POST',
+          data: formData,
+          success: function (response) {
+            // handle success response
+             document.getElementById(`imagesRow${imgUrl}`).remove()
+            console.log(response);
+          },
+          error: function (xhr, status, error) {
+            // handle error response
+            console.log(error);
+          }
+        });
+      }
+    </script>
+
