--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -117,11 +117,11 @@
             });
         })
     </script>
-
+ <script src="/assets/js/jquery.validate.min.js"></script>
+    <script src="/assets/js/mail-script.js"></script>
+    <script src="/assets/js/jquery.ajaxchimp.min.js"></script>
     {{else}}
-
-
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/elevatezoom/3.0.1/jquery.elevatezoom.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     <script src="/assets/js/vendor/modernizr-3.5.0.min.js"></script>
@@ -148,7 +148,7 @@
     
     <!-- contact js -->
     <script src="/assets/js/contact.js"></script>
-    <script src="/assets/js/jquery.form.js"></script>
+    {{!-- <script src="/assets/js/jquery.form.js"></script> --}}
     <script src="/assets/js/jquery.validate.min.js"></script>
     <script src="/assets/js/mail-script.js"></script>
     <script src="/assets/js/jquery.ajaxchimp.min.js"></script>
