--- a/views/partials/shop-header.hbs
+++ b/views/partials/shop-header.hbs
@@ -44,6 +44,7 @@
                                             
                                            
                                             <li><a href="/logout">logout</a></li>
+                                            <li><a href="/orders">my orders</a></li>
                       
                                         </ul>
                                     </li>
