order in user and admin side

--- a/views/partials/adminHeader.hbs
+++ b/views/partials/adminHeader.hbs
@@ -28,7 +28,7 @@
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                         <a class="dropdown-item" href="/admin/accounts">all users</a>
-                                        <a class="dropdown-item" href="#">Weekly Report</a>
+                                        <a class="dropdown-item" href="/admin/order">orders</a>
                                         <a class="dropdown-item" href="#">Yearly Report</a>
                                     </div>
                                 </li>
