--- a/views/user/checkOut.hbs
+++ b/views/user/checkOut.hbs
@@ -300,42 +300,42 @@
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="p-4">
-        <form action="/checkOutPost" method="post">
+        <form action="/addAddress" method="post">
 
           <div class="form-row">
             <div class="form-group col-md-6">
               <label for="inputEmail4">Name</label>
-              <input type="name" class="form-control" name="name" id="inputEmail4" placeholder="Name">
+              <input type="name" class="form-control" name="name" id="inputEmail4" placeholder="Name" required>
             </div>
             <div class="form-group col-md-6">
               <label for="inputPassword4">Mobile Number</label>
-              <input type="text" maxlength="10" class="form-control" name="phone" id="inputPassword4"
+              <input type="text" maxlength="10" class="form-control" name="phone" id="inputPassword4" required
                 placeholder="Mobile Number">
             </div>
           </div>
           <label for="">Address</label>
           <div class="form-group">
             <textarea name="address" class="form-control" id="address" cols="50" placeholder="Address (Area and Street)"
-              rows="5"></textarea>
+              rows="5" required></textarea>
           </div>
           <div class="form-row">
             <div class="form-group col-md-6">
               <label for="inputCity">City</label>
-              <input type="text" name="city" class="form-control" placeholder="city" id="inputCity">
+              <input type="text" name="city" class="form-control" placeholder="city" id="inputCity" required>
             </div>
             <div class="form-group col-md-4">
               <label for="inputState">State</label>
-              <input type="text" class="form-control" placeholder="State" name="state">
+              <input type="text" class="form-control" placeholder="State" name="state" required>
             </div>
             <div class="form-group col-md-2">
               <label for="inputZip">Zip Code</label>
-              <input type="text" class="form-control" name="postCode" placeholder="Zip Code" id="inputZip">
+              <input type="text" class="form-control" name="postCode" placeholder="Zip Code" id="inputZip" required>
             </div>
           </div>
           <label for="type">Address Type</label>
           <div class="form-row text-dark">
-            <input type="radio" class="mr-1" name="type" value="home">Home &nbsp;&nbsp;&nbsp;
-            <input type="radio" class="mr-1" name="type" value="work">Work
+            <input type="radio" class="mr-1" name="type" value="home" required>Home &nbsp;&nbsp;&nbsp;
+            <input type="radio" class="mr-1" name="type" value="work" required>Work
           </div>
           <div class="text-center mt-2">
             <input type="submit" class="btn btn-primary" value="SUBMIT">
@@ -379,45 +379,45 @@
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="p-4">
-        <form action="/editAddressPost/{{this._id}}" method="post">
+        <form action="/editAddress/{{this._id}}" method="post">
 
           <div class="form-row">
             <div class="form-group col-md-6">
               <label for="inputEmail4">Name</label>
               <input type="name" class="form-control" name="name" id="inputEmail4" value="{{this.name}}"
-                placeholder="Name">
+                placeholder="Name" required>
             </div>
             <div class="form-group col-md-6">
               <label for="inputPassword4">Mobile Number</label>
               <input type="text" maxlength="10" class="form-control" name="phone" value="{{this.phone}}"
-                id="inputPassword4" placeholder="Mobile Number">
+                id="inputPassword4" placeholder="Mobile Number" required>
             </div>
           </div>
           <label for="">Address</label>
           <div class="form-group">
             <input name="address" class="form-control" value="{{this.address}}" id="address" cols="50"
-              placeholder="Address (Area and Street)" rows="5">
+              placeholder="Address (Area and Street)" rows="5" required>
           </div>
           <div class="form-row">
             <div class="form-group col-md-6">
               <label for="inputCity">City</label>
               <input type="text" name="city" class="form-control" value="{{this.city}}" placeholder="city"
-                id="inputCity">
+                id="inputCity" required>
             </div>
             <div class="form-group col-md-4">
               <label for="inputState">State</label>
-              <input type="text" class="form-control" value="{{this.state}}" placeholder="State" name="state">
+              <input type="text" class="form-control" value="{{this.state}}" placeholder="State" name="state" required>
             </div>
             <div class="form-group col-md-2">
               <label for="inputZip">Zip Code</label>
               <input type="text" class="form-control" value="{{this.postCode}}" name="postCode" placeholder="Zip Code"
-                id="inputZip">
+                id="inputZip" required>
             </div>
           </div>
           <label for="type">Address Type</label>
           <div class="form-row text-dark">
-            <input type="radio" class="mr-1" name="type" value="home">Home &nbsp;&nbsp;&nbsp;
-            <input type="radio" class="mr-1" name="type" value="work">Work
+            <input type="radio" class="mr-1" name="type" value="{{this.type}}" required>Home &nbsp;&nbsp;&nbsp;
+              <input type="radio" class="mr-1" name="type" value="{{this.type}}" required>Work
           </div>
           <div class="text-center mt-2">
             <button type="submit" class="btn btn-primary">SUBMIT</button>
@@ -539,7 +539,9 @@
           window.location.href = '/'; // redirect after the modal is displayed
         }, 2000);
 
-      } 
+      } else if(response.data.paymentMethod === 'card'){
+        razorpayPayment(response.data.response, response.data.userDetails);
+      }
     }).catch((err) => {
       console.log(err + "erorrrrr")
     })
@@ -571,6 +573,40 @@
     }).catch((error) => {
       console.error(error);
     })
+  };
+
+</script>
+<script>
+
+  
+ function razorpayPayment(order, userDetails) {
+    var options = {
+      "key": "rzp_test_Ux8YZjiJfYm5FU",       // Enter the Key ID generated from the Dashboard
+      "amount": order.amount * 100, // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
+      "currency": "INR",
+      "name": "Vadakkethalakkal Watches", //your business name
+      "description": "Test Transaction",
+      "image": "",
+      "order_id": order.id,       //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
+      //"callback_url": "https://eneqd3r9zrjok.x.pipedream.net/",
+
+      "handler": function (response) {
+        verifyPayment(response, order);
+      },
+      "prefill": {
+        "name": userDetails.name,
+        "email": userDetails.email,
+        "contact": userDetails.phone
+      },
+      "notes": {
+        "address": "Razorpay Corporate Office"
+      },
+      "theme": {
+        "color": "#3399cc"
+      }
+    }
+    var rzp1 = new Razorpay(options);
+    rzp1.open();
   };
 
 </script>
