--- a/views/partials/adminHeader.hbs
+++ b/views/partials/adminHeader.hbs
@@ -29,7 +29,7 @@
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                         <a class="dropdown-item" href="/admin/accounts">all users</a>
                                         <a class="dropdown-item" href="/admin/order">orders</a>
-                                        <a class="dropdown-item" href="#">Yearly Report</a>
+                                        <a class="dropdown-item" href="/admin/adminCoupon">Coupons</a>
                                     </div>
                                 </li>
                                 <li class="nav-item">
