--- a/views/admin/accounts.hbs
+++ b/views/admin/accounts.hbs
@@ -57,9 +57,9 @@
                     {{#if status}}
                   <i class="fas fa-toggle-on text-success"></i>
                   {{else}}
-                  <i class="fas fa-toggle-off text-danger"></i>
+                 <a href="/admin/UnBlock/{{this._id}}">
+                  <i class="fas fa-toggle-off text-danger"></i></a>
                   {{/if}}
-                  </a>
                 
                 
                 </td>
