--- a/views/admin/product.hbs
+++ b/views/admin/product.hbs
@@ -63,8 +63,8 @@
   10px; }
 </style>
 
-<div class="row tm-content-row m-2">
-  <div class="col-sm-12 col-md-12 col-lg-9 col-xl-9 tm-block-col text-white">
+<div class="row tm-content-row m-2 ml-5">
+  <div class="col-sm-12 col-md-12 col-lg-9 col-xl-9 tm-block-col ml-5  bg-white text-dark">
     {{! <!-- <div class="tm-bg-primary-dark tm-block tm-block-products"> -->
     <!-- <form action="/admin/searchProduct" method="post">
             <div class="mt-1 input-group">
@@ -78,7 +78,7 @@
     <!-- <div class="tm-product-table-container"> --> }}
     <table
       id="myTable"
-      class="table table-hover tm-table-small tm-product-table"
+      class="table table-hover tm-table-small tm-product-table" 
     >
       <thead>
         <tr>
